--- a/style/main.css
+++ b/style/main.css
@@ -216,7 +216,9 @@ body {
   font-weight: lighter;
   margin: 10px 0 0;
 }
-
+.nine{
+  margin-top: -100px;
+}
 .nine p {
   font-size: 2rem;
   font-weight: lighter;
@@ -230,6 +232,7 @@ body {
   flex-direction: column;
   color: black;
   background: #F18485;
+
 }
 #replay {
   cursor: pointer;
